<resources>
    <string name="app_name">Quiz World</string>
    <string name="appLogo">To λογότυπο της εφαρμογής</string>
    <string name="welcome_message">Είσοδος στο Quiz World</string>
    <string name="user_login">Σύνδεση Χρήστη</string>
    <string name="password">Κωδικός</string>
    <string name="email">Διεύθυνση email</string>
    <string name="emailHINT">To email σου</string>
    <string name="passwordHINT">Ο κωδικός σου</string>
    <string name="remindPassword">Υπενθύμιση Κωδικού</string>
    <string name="login_now">ΣΥΝΔΕΣΗ</string>
    <string name="signup">ΕΓΓΡΑΦΗ ΝΕΟΥ ΧΡΗΣΤΗ</string>
    <string name="signup2">Εγγραφή στο Quiz World</string>
    <string name="signup3">ΕΓΓΡΑΦΗ</string>
    <string name="signup_student">ΕΓΓΡΑΦΗ ΩΣ ΜΑΘΗΤΗΣ</string>
    <string name="signup_student2">Εγγραφή ως μαθητής</string>
    <string name="signup_teacher">ΕΓΓΡΑΦΗ ΩΣ ΚΑΘΗΓΗΤΗΣ</string>
    <string name="signup_teacher2">Εγγραφή ως καθηγητής</string>
    <string name="change_entrance_option">Έχεις λογαριασμό; Κάνε σύνδεση.</string>
    <string name="errorInputMessage1">Το email ή ο κωδικός δε μπορεί να είναι κενός.</string>
    <string name="errorInputMessage1_1">Συμπλήρωσε όλα τα στοιχεία της φόρμας.</string>
    <string name="errorInputMessage2">Η διεύθυνση email δεν είναι έγκυρη.</string>
    <string name="errorInputMessage2_1">Πρέπει να είσαι τουλ. 6 ετών για να κάνεις εγγραφή.</string>
    <string name="errorInputMessage2_2">1η Δημοτικού = 1, .... 3η Λυκείου = 12</string>
    <string name="errorInputMessage2_3">O κωδικός πρέπει να έχει λατινικά, 1 ψηφίο,1 κεφαλαίο και 1 μικρό γράμμα.</string>
    <string name="errorInputMessage2_4">To IBAN δεν είναι έγκυρο.</string>
    <string name="errorInputMessage2_5">Πρέπει να είσαι τουλ. 18 ετών για να κάνεις εγγραφή.</string>
    <string name="errorInputMessage3">Το email ή ο κωδικός πρόσβασης είναι λάθος.</string>
    <string name="errorInputMessage4">H δυνατότητα υπενθύμισης κωδικού δεν είναι ακόμα διαθέσιμη.</string>
    <string name="succesfulRegistrationMessage">Επιτυχής εγγραφή.</string>
    <string name="validInputMessage">Έγκυρα στοιχεία.</string>
    <string name="deleteInputMessage"></string>
    <string name="firstName">Όνομα</string>
    <string name="lastName">Επώνυμο</string>
    <string name="age">Ηλικία</string>
    <string name="grade">Σχολική Τάξη</string>
    <string name="iban">IBAN</string>
    <string name="profession">Ειδικότητα</string>
    <string name="ssn">AMKA</string>
    <string name="blank"></string>
    <string name="bio">Σύντομο βιογραφικό</string>
    <string name="studentHomepage">Αρχική - Μαθητής</string>
    <string name="teacherHomepage">Αρχική - Καθηγητής</string>
    <string name="dummyIBAN">GR7701720110005011000009849</string>
    <string name="participate_in_quiz">ΝΕΟ QUIZ</string>
    <string name="participate_in_quiz2">Συμμετοχή σε νέο quiz</string>
    <string name="register_to_course">ΕΓΓΡΑΦΗ ΣΕ ΜΑΘΗΜΑ</string>
    <string name="register_to_course2">Εγγραφή σε νέο μάθημα</string>
    <string name="my_courses">ΤΑ ΜΑΘΗΜΑΤΑ ΜΟΥ</string>
    <string name="my_courses2">Τα μαθήματα μου</string>
    <string name="my_results">ΟΙ ΒΑΘΜΟΙ ΜΟΥ</string>
    <string name="my_results2">Οι βαθμοί μου</string>
    <string name="create_a_quiz">ΔΗΜΙΟΥΡΓΙΑ QUIZ</string>
    <string name="create_a_quiz2">Δημιουργία νέου quiz</string>
    <string name="create_a_course">ΔΗΜΙΟΥΡΓΙΑ ΜΑΘΗΜΑΤΟΣ</string>
    <string name="create_a_course2">Δημιουργία νέου μαθήματος</string>
    <string name="my_saved_questions">ΑΠΟΘΗΚΕΥΜΕΝΕΣ ΕΡΩΤΗΣΕΙΣ</string>
    <string name="my_saved_questions2">Οι αποθηκευμένες ερωτήσεις μου</string>
    <string name="my_students_results">ΒΑΘΜΟΛΟΓΙΕΣ ΜΑΘΗΤΩΝ</string>
    <string name="my_students_results2">Οι βαθμολογίες των μαθητών μου</string>
    <string name="my_quizes">ΕΠΕΞΕΡΓΑΣΙΑ QUIZ</string>
    <string name="my_quizes2">Επεξεργασία υπάρχοντος quiz</string>
    <string name="add_questions">ΠΡΟΣΘΗΚΗ ΕΡΩΤΗΣΕΩΝ</string>
    <string name="add_questions2">Προσθήκη ερωτήσεων στην τράπεζα</string>
    <string name="exit">ΕΞΟΔΟΣ</string>
    <string name="courseid">Κωδικός Μαθήματος</string>
    <string name="courseGrade">Σχολική Τάξη</string>
    <string name="courseName">Τίτλος Μαθήματος</string>
    <string name="courseDescription">Περιγραφή Μαθήματος</string>
    <string name="coursePrice">Τιμή Εγγραφής</string>
    <string name="createCourseNow">ΔΗΜΙΟΥΡΓΙΑ ΜΑΘΗΜΑΤΟΣ</string>
    <string name="succesfulCourseCreation">Επιτυχής καταχώρηση μαθήματος</string>
    <string name="courseTitle">Τίτλος Μαθήματος</string>
    <string name="choose">Επιλογή</string>
    <string name="questionDescription">Περιγραφή Ερώτησης</string>
    <string name="chooseDifficulty">Επιλογή Δυσκολίας</string>
    <string name="easy">Εύκολη</string>
    <string name="medium">Μέτρια</string>
    <string name="hard">Δύσκολη</string>
    <string name="chooseType">Επιλογή Τύπου</string>
    <string name="trueOrfalse">Σωστό/Λάθος</string>
    <string name="multipleChoice">Πολλαπλής Επιλογής</string>
    <string name="correctAnswerDescription">Σωστή Απάντηση</string>
    <string name="addQuestion">Προσθήκη Ερώτησης</string>
    <string name="trueAnswer">Σωστή</string>
    <string name="falseAnswer">Λάθος</string>
    <string name="falseAnswerDescription1">Λάθος Απάντηση 1</string>
    <string name="falseAnswerDescription2">Λάθος Απάντηση 2</string>
    <string name="falseAnswerDescription3">Λάθος Απάντηση 3</string>
    <string name="submitQuestion">Υποβολή ερώτησης</string>
    <string name="description">Εκφώνηση ερώτησης</string>
    <string name="notAvailable">Μη διαθέσιμο!</string>
    <string name="remindPasswordIsnotAvailable">Η δυνατότητα υπενθύμισης κωδικού δεν είναι ακόμα διαθέσιμη.</string>
    <string name="ok">OK</string>
    <string name="emptyInput">Κενά στοιχεία.</string>
    <string name="emptyInputInfo">To email και ο κωδικός πρόσβασης δεν γίνεται να είναι κενά.</string>
    <string name="invalidEmail">Μη έγκυρη διεύθυνση email.</string>
    <string name="invalidEmailInfo">Η διεύθυνση email δεν αντιστοιχεί σε πραγματική διεύθυνση ηλετρονικού ταχυδρομείου.</string>
    <string name="noUserFound">Δε βρέθηκε χρήστης.</string>
    <string name="noUserFoundInfo">Δε βρέθηκε χρήστης με αυτό το συνδιασμό email και κωδικού. Δοκιμάστε κάτι άλλο.</string>
    <string name="uknownError">Άγνωστο σφάλμα.</string>
    <string name="uknownErrorInfo">Προέκυψε ένα άγνωστο σφάλμα.</string>
    <string name="errorInputMessage1_1Info">Όλα τα πεδία είναι υποχρεωτικά.</string>
    <string name="errorInputMessage2_1Info">Δεν επιτρέπονται χρήστες κάτω των 6 ετών να χρησιμοποιούν την εφαρμογή αυτή.</string>
    <string name="errorInputMessage2_2Info">Γράψε τον αριθμό που αντιστοιχεί με την τάξη σου. Το 1 αντιστοιχεί στην 1η Δημοτικού. Το 12 στην 3η Λυκείου.</string>
    <string name="errorInputMessage2_3Info">Άλλαξε τον κωδικό σου και ξαναπροσπάθησε.</string>
    <string name="errorInputMessage2_4Info">Άλλαξε το IBAN σου και ξανα προσπάθησε.</string>
    <string name="errorInputMessage2_5Info">Για να έχεις την ιδιότητα του καθηγητή πρέπει να είσαι τουλάχιστον ενήλικας.</string>
    <string name="delete">ΑΦΑΙΡΕΣΗ</string>
    <string name="quizTitle">Κωδικός Διαγωνίσματος</string>
    <string name="quizDate">Ημερομηνία</string>
    <string name="quizResult">Βαθμολογία</string>
    <string name="moreInfo">ΛΕΠΤΟΜΕΡΕΙΕΣ</string>
    <string name="quizParticipants">Συμμετοχές</string>
    <string name="changeQuestions">Επεξεργασία Ερωτήσεων</string>
    <string name="deleteQuiz">Διαγραφή Quiz</string>
</resources>