<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.view.signup.signupStudent.SignUpStudentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
    >

    <EditText
        android:id="@+id/editstudentEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        />


    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/editstudentfirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/firstName"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/editstudentlastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/lastName"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/editstudentAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/editstudentGrade"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/grade"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/editstudentIBAN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/iban"
        android:text="@string/dummyIBAN"
        android:inputType="text"
        />

    <Button
        android:id="@+id/buttonStudentSignUp"
        android:layout_width="108dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/signup3"
        android:visibility="visible"
        />
    </LinearLayout>
</ScrollView>