<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.view.login.LogInActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/transparentlogo"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center" />

        <EditText
        android:id="@+id/inputEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/emailHINT"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:visibility="visible" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/passwordHINT"
        android:autofillHints=""
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/login_now" />

    <Button
        android:id="@+id/remindpasswordButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/remindPassword"
        android:visibility="visible"
        app:backgroundTint="#BC4D6D"
        tools:visibility="visible" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/signup"
        app:backgroundTint="#00BCD4" />
    </LinearLayout>
</RelativeLayout>